--- a/client/index.html
+++ b/client/index.html
@@ -72,6 +72,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/user-dash/user-dash.controller.js"></script>
           <script src="app/user-dash/user-dash.js"></script>
+          <script src="app/voter/voter.directive.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
