--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
           <script src="app/main/main.js"></script>
           <script src="app/user-dash/user-dash.controller.js"></script>
           <script src="app/user-dash/user-dash.js"></script>
+          <script src="app/votedChecker/votedChecker.service.js"></script>
           <script src="app/voter/voter.directive.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
