--- a/client/index.html
+++ b/client/index.html
@@ -72,8 +72,10 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/chartMaker/chartMaker.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/pollGetter/pollGetter.service.js"></script>
           <script src="app/user-dash/user-dash.controller.js"></script>
           <script src="app/user-dash/user-dash.js"></script>
           <script src="app/votedChecker/votedChecker.service.js"></script>
