Make vote route

--- a/client/index.html
+++ b/client/index.html
@@ -78,6 +78,8 @@
           <script src="app/pollGetter/pollGetter.service.js"></script>
           <script src="app/user-dash/user-dash.controller.js"></script>
           <script src="app/user-dash/user-dash.js"></script>
+          <script src="app/vote/vote.controller.js"></script>
+          <script src="app/vote/vote.js"></script>
           <script src="app/voter/voter.directive.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
